--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 title: "Help Center"
 email: gusquinalha@gmail.com
 description: "Simple and flexible Jekyll theme for help center."
-baseurl: "/jekyll-help-center-theme"
-url: "http://quinalha.me"
-twitter_username: "gustavoquinalha"
-github_username:  "gustavoquinalha"
+# baseurl: "/jekyll-help-center-theme"
+url: ""
+twitter_username: "lonerolnr"
+github_username:  "lonero-team"
 color_theme:  "#0081ff"
 color_text:  "#fff"
 language:  "en"
