--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: "Help Center"
-email: gusquinalha@gmail.com
+email: andew@etherstone.org
 description: "Simple and flexible Jekyll theme for help center."
 # baseurl: "/jekyll-help-center-theme"
 url: ""
