--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: "Help Center"
 email: andew@etherstone.org
 description: "Simple and flexible Jekyll theme for help center."
 # baseurl: "/jekyll-help-center-theme"
-url: ""
+url: "https://lonero.readthedocs.io"
 twitter_username: "lonerolnr"
 github_username:  "lonero-team"
 color_theme:  "#0081ff"
