--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
   "bugs": {
     "url": "https://github.com/gustavoquinalha/jekyll-help-center-theme/issues"
   },
-  "homepage": "https://github.com/gustavoquinalha/jekyll-help-center-theme#readme"
+  "homepage": "https://lonero.readthedocs.io"
 }
